--- a/netlify.toml
+++ b/netlify.toml
@@ -1,8 +1,9 @@
 [build]
-  functions = "functions"
+  command = "npm run build"
   publish = "public"
 
-[[redirects]]
-  from = "/*"
-  to = "/index.html"
-  status = 200
+[[plugins]]
+  package = "netlify-plugin-inline-functions-env"
+
+[functions]
+  directory = "netlify/functions"
