--- a/package.json
+++ b/package.json
@@ -4,9 +4,15 @@
   "description": "Roblox Securities Trading Exchange",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "build": "npm run build",
+    "start": "npm start",
+    "init-db": "node initDB.js"
   },
   "keywords": [],
   "author": "",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "knex": "^3.1.0",
+    "sqlite3": "^5.1.7"
+  }
 }
