--- a/netlify.toml
+++ b/netlify.toml
@@ -1,9 +1,10 @@
 [build]
   command = "npm run build"
   publish = "public"
+  functions = "functions"
 
 [[plugins]]
   package = "netlify-plugin-inline-functions-env"
 
 [functions]
-  directory = "netlify/functions"
+  directory = "functions"
